
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2023 JAN 20a
  * in tools/chemkin2cfdwarp.c
    - fixed some realloc bugs
  * in model/share/fluid_share.c
    - in find_init_mass_fraction_templates(), fixed a bug related to strcpy which should be strcat
  * in src/bdry.c
    - added function unlink_nodes_in_zone() taken from the Unlink() command
    - in read_bdry_actions(), now calls unlink_nodes_in_zone() when the Cut() command is called
  * in model/chem/_Air_Plasma_11s/thoguluva2023.c
    - changed EXPON_TTV from 0.5 to 0.75
  * in model/fluid/_Favre-Reynolds/fluid_bdry.c
    - added BDRY_INFLOWINJECTION1, and update_bdry_inflow_injection()


2023 JAN 10a
  * in model/chem/_Air_Plasma_11s/
    - added option to use reaction rates based on BOLSIG+ data in thoguluva2023.c
    - fixed a typo in find_dW_dx_Kim2021() for reaction 12 in kim2021.c and removed redundant lines of code
    
    
2023 JAN 09a
  * in model/share/fluid_share.c
    - changed parameters to update_w_V_at_injection_wall() to include nukA and nukB and not Twall
      and Tewall
  * in model/fluid/_Favre-Reynolds/fluid_bdry.c
    - added BDRY_WALLTFIXEDINJECTION1
  * in model/fluid/_Favre-Reynolds_Tv/fluid_bdry.c, model/fluid/_Navier-Stokes/fluid_bdry.c, 
    model/fluid/_Navier-Stokes_plasma/fluid_bdry.c
    - in update_bdry_wall(), updated call to update_w_V_at_injection_wall() so that it is function
      of nukA and nukB
      

2023 JAN 06a
  * in model/share/fluid_share.c
    - in condition_Lambda_plus_minus_zetaA2(), commented out special treatment for the charged species
      fluxes; now deals with charged species fluxes as other fluxes
    - in find_init_mass_fraction_templates(), fixed a bug related to writing the default control